apps/palworld/live-map/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: palworld-live-map
  namespace: palworld
spec:
  parentRefs:
  - name: internet
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - palmap.desertbluffs.com
  rules:
  - backendRefs:
    - name: palworld-live-map
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: palworld-live-map-private
  namespace: palworld
spec:
  parentRefs:
  - name: private
    namespace: envoy-gateway-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - palmap.radoncanyon.com
  - palmap.desertbluffs.com
  rules:
  - backendRefs:
    - name: palworld-live-map
      port: 80
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
